fed down control-only feeds.  Besides, poisoned control groups were not
properly handled.  Thanks to Andrew Gierth for the patch.

=item *

Fixed a bug in B<innreport> which was not correctly summing B<innd>
stats when I<hostname> was set as an IPv6 address instead of a fully
qualified domain name.  Thanks to Petr Novopashenniy for the bug report.

=item *

Fixed a bug in B<nnrpd> Perl filter:  a header field whose name begins with
the name of a standardized header field was not properly taken into account.

=item *

Fixed a bug on how B<innd> was parsing Message-ID: and Supersedes: headers
which contained trailing whitespaces.  The article ended up
corrupted because of an unexpected "\r" in the middle of the header.
Besides, B<nnrpd> now checks the syntax of the Message-ID: header,
if present.

=item *

Fixed a bug in how leading whitespaces were treated in headers.  The
HDR, XHDR and XPAT commands were not properly showing leading whitespaces
in header values.  Besides, "\n" and "\r" were both changed into spaces
whereas "\r\n" just was to be removed.  As for B<archive>, B<makehistory>
and B<tdx-util>, they did not keep leading whitespaces in headers when
generating overview data, and B<archive> did not change "\n"
(when not preceded by "\r") into a space when generating overview data.

=item *

Fixed a bug in the generation of overview data which may corrupt previously
generated overview data when a malicious pseudo Xref: header field is
injected in an extra overview field.

=item *

Fixed a bug in the parsing of the I<ovgrouppat> wildmat in F<inn.conf>
that prevented overview data from being generated when poisoned groups
were specified but a latter sub-pattern made the group wanted.  A uwildmat
expression is now correctly handled, and a potential segfault has been fixed.
Thanks to Dieter Stussy for the bug report.

=item *

Fixed a bug when HDR, XHDR and XPAT were used when I<virtualhost> was set